2011/06/26 - add hiera_hash function
2011/06/12 - Release 0.2.0
2011/06/11 - add hiera_array function
2011/06/11 - add hiera_include function
2011/06/11 - add array search support
2011/06/06 - include Apache 2 license